# UdemyCpp

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Libs.md  Makefile  PropertySheet.props  README.md  TODO.md  UdemyCppKurs.sln  cpplint.cfg
01_Basics/: ConsoleInput.cc  Factorial.cc  Functions.cc  GuessingGame2.cc  GuessingGame3.cc  GuessingGame6.cc  Integers.cc  Main.cc  example_absolute.cc  example_prime.cc
01_Intro/: Main.cc  Runner.md
02_ArrayPointer/: Array1.cc  Array2.cc  Array3.cc  ArrayDifference1.cc  ArrayDifference2.cc  ArrayPointerDecay.cc  MultiDimArray.cc  PassPointerArray.cc  Pointer1.cc  Pointer3.cc  References.cc  References2.cc
03_EnumStruct/: EnumClass.cc  Namespace.cc  Struct.cc  Struct2.cc  Switch.cc
03_MoreBasics/: Auto.cc  Const.cc  Defines.cc  Enum.cc  EnumClass.cc  Struct.cc  Struct2.cc  Struct3.cc  Switch.cc
04_MoreBasics/: Enum.cc  GlobalStatic.cc  Namespace.cc  Struct2.cc  Struct3.cc
04_Vector/: Auto.cc  EraseRemove.cc  MathFunctions.cc  MathFunctions2.cc  MultiDimVector.cc  RangedFor.cc  StructBinding.cc  TypedefUsing.cc  UniformInit.cc  VectorMethods.cc  VectorMethods2.cc  VectorSort.cc
05_String/: Binary.cc  ExamplePalindrom.cc  FileIO.cc  FileIO_2.cc  FileSystem1.cc  FileSystem2.cc  String.cc  StringViews.cc  Strings2.cc  Strings3.cc  Strings4.cc  Text.txt
05_Vector/: EraseRemove.cc  MathFunctions.cc  MathFunctions2.cc  MathFunctions2_Start.cc  MathFunctions_Start.cc  MultiDimVector.cc  RangedFor.cc  StructBinding.cc  TypedefUsing.cc  VectorFirstExample.cc  VectorMethods.cc  VectorMethods2.cc  VectorSizeCapacity.cc  VectorSort.cc
06_ContainerIterator/: Inserter.cc  Iterator.cc  Iterator2.cc  List.cc  ListVsVector.cc  PairTuple.cc  Set.cc  StructuredBindings.cc  Timer.h
06_String/: Binary.cc  ExamplePalindrom_Start.cc  FileSystem1.cc  FileSystem2.cc  SSO.cc  String.cc  StringViews.cc  Strings2.cc  Strings3.cc  Strings4.cc  TextOutput.txt
08_STL/: unix.cc  (+17 more)
GUI-ImGui/: .clang-tidy  .gitignore  CMakeLists.txt  README.md
GUI-ImGui/app/: main.cpp
GUI-ImGui/src/: CMakeLists.txt  render.cpp  render.hpp
(+1379 files in other folders)
